--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ html {
 
 body {
   margin: auto;
+  background-color: #F1F0EA;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
