--- a/src/css/Playlist.module.css
+++ b/src/css/Playlist.module.css
@@ -1,5 +1,5 @@
-.SearchResults {
-    background-color: #F1F0EA;
+.Playlist {
+    background-color: #FFF;
     width: 100%;
     display: flex;
     flex-direction: column;
