--- a/src/css/App.module.css
+++ b/src/css/App.module.css
@@ -32,6 +32,14 @@ h2 {
     color: #534B52;
 }
 
+input {
+    width: 12rem;
+    height: 1.5rem;
+    margin-right: 1rem;
+    background-color: #F1F0EA;
+    border: none;
+}
+
 button:hover {
     background-color: #C3BEA2;
     cursor: pointer;
