--- a/src/css/Playlist.module.css
+++ b/src/css/Playlist.module.css
@@ -5,5 +5,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-bottom: 2rem;
+    padding: 2rem 0;
+}
+
+.Playlist input {
+    border: 1px solid #474448;
+    margin-bottom: 2rem;
+}
+
+.Playlist span {
+    
 }
