--- a/src/css/Playlist.module.css
+++ b/src/css/Playlist.module.css
@@ -1,18 +1,26 @@
 .Playlist {
     background-color: #FFF;
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding: 2rem 0;
+    min-height: 320px;
+    min-width: 320px;
+    border: dotted 1px #534B52;
+    padding: 1rem 0;
 }
 
 .Playlist input {
-    border: 1px solid #474448;
-    margin-bottom: 2rem;
+    border-bottom: 1px solid #474448;
 }
 
-.Playlist span {
-    
+.header {
+
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.Playlist h2 {
+    margin-right: 1rem;
 }
