--- a/src/css/SearchResults.module.css
+++ b/src/css/SearchResults.module.css
@@ -1,9 +1,14 @@
 .SearchResults {
-    background-color: #F1F0EA;
-    width: 100%;
+    background-color: #FFF;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding-bottom: 2rem;
+    min-height: 320px;
+    min-width: 320px;
+    border: dotted 1px #534B52;
+    padding: 1rem 0;
+}
+
+.header {
+
 }
