The user can save his playlist on Spotify

--- a/src/css/Playlist.module.css
+++ b/src/css/Playlist.module.css
@@ -9,7 +9,7 @@
     padding: 1rem 0;
 }
 
-.Playlist input {
+input {
     border-bottom: 1px solid #474448;
 }
 
@@ -18,9 +18,26 @@
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
-
+    height: 5rem;
 }
 
-.Playlist h2 {
-    margin-right: 1rem;
+.listContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.secondaryButton {
+    height: 2rem;
+    border: 0.5px solid #534B52;
+    border-radius: 0;
+    padding: 0 1rem;
+    color: #534B52;
+    font-weight: 300;
+    font-size: 0.75rem;
+}
+
+.secondaryButton:hover {
+    background-color: hsl(49, 22, 45);
 }
