--- a/src/css/SearchResults.module.css
+++ b/src/css/SearchResults.module.css
@@ -1,3 +1,10 @@
+.listContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
 .SearchResults {
     background-color: #FFF;
     display: flex;
@@ -10,5 +17,5 @@
 }
 
 .header {
-
+    height: 5rem;
 }
